syntax = "proto3";

package ethereum;

option go_package = "fatykhova.ethereum.v1;ethereumv1";

service EthereumService {
    rpc GetAccount (GetAccountRequest) returns (GetAccountResponse) {}
    rpc GetAccounts (GetAccountsRequest) returns (GetAccountsResponse) {}
}

message GetAccountRequest {
    bytes ethereum_address = 1;
    bytes crypto_signature = 2;
}

message GetAccountResponse {
    string gastoken_balance = 1;
    uint64 wallet_nonce = 2;
}

message GetAccountsRequest {
    repeated bytes ethereum_addresses = 1;
    bytes erc20_token_address = 2;
}

message GetAccountsResponse {
    repeated bytes ethereum_addresses = 1;
    bytes erc20_token_address = 2;
}